Gets menu titles from config properties file